# metam

./: CMakeLists.txt  README.md
compiler-core/: CMakeLists.txt  comc.cpp  comc.hpp
compiler-core/comc/: Framework.hpp  Lexer.hpp  Reporter.hpp  StreamLexer.hpp  Tokens.hpp
examples/: 0-hello-world.metm  1-calculator.metm  2-calculator-2.metm  syntax-0(failed).metm  syntax-1.metm  syntax-2.metm
metam-compiler-core/: CMakeLists.txt  metam-comc.cpp  metam-comc.hpp
metam-compiler-core/metam-comc/: Framework.hpp  Tokenizator.hpp  Tokens-enum.hpp  Tokens.hpp
metam-test/: CMakeLists.txt  main.cpp
